--- a/FUENTE/CSS/tarjetas.css
+++ b/FUENTE/CSS/tarjetas.css
@@ -72,6 +72,7 @@
 
 .img img {
     width: 100%;
+    height: auto;
     border-radius: 10px; 
     border: 2px solid #000; 
 }
@@ -97,16 +98,16 @@
     } 
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 850px) {
      .tarjetas, .tarjetas_2 {
         grid-auto-columns: calc((100% / 2) - 6px); 
 
     }
 }
 
-  @media screen and (max-width: 465px) {
+  @media screen and (max-width: 550px) {
     .contenedor-tarjetas, .contenedor-tarjetas_2{
-        width: 80%;
+        width: 75vw;
     }
     .tarjetas, .tarjetas_2 {
         grid-auto-columns: calc((100% / 1)); 
